--- a/game16/css/style.css
+++ b/game16/css/style.css
@@ -5,6 +5,8 @@ html, body {
       border: 0;
       overflow: hidden; /*  Disable scrollbars */
       display: block;  /* No floating content on sides */
+      /*font-family: 'Titan One', serif;
+      font-size: 24px;*/
     }
 #page {
     display: none;
