Added texts in the beginning of each level

--- a/game16/css/style.css
+++ b/game16/css/style.css
@@ -12,7 +12,10 @@ html, body {
     font-family: sinsofrh;
     src: url(sinsofrh.ttf);
 }
-
+@font-face {
+    font-family: Gravity-Regular;
+    src: url(Gravity-Regular.otf);
+}
 div {
     font-family: sinsofrh;
 }
